[package]
name = "cursor-acp"
version = "0.2.0"
edition = "2021"
authors = ["David Chavez <david@dcvz.io>"]
license = "Apache-2.0"
description = "An ACP-compatible coding agent adapter for Cursor CLI"
repository = "https://github.com/oxiglade/cursor-acp"
homepage = "https://github.com/oxiglade/cursor-acp"
keywords = ["acp", "cursor", "ai", "coding-agent"]
categories = ["development-tools"]

[[bin]]
name = "cursor-acp"
path = "src/main.rs"

[lib]
name = "cursor_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.9.3", features = ["unstable"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
async-trait = "0.1"
which = "7"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"
